--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <div class="square"></div>
       <div class="square"></div>
     </div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
